--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-  window.location.href="https://dl.dblgame.fun/?parent=10879511&l="
+  window.location.href="https://main.RY803.com/?AgentId=202048"
 </script>
 
 
