--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -6,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>欧博娱乐，注册送6元</title>
+    <title>欧博,注册送6元</title>
 
     <link rel="stylesheet" href="static/css/basics.css">
     <link rel="stylesheet" href="static/css/main.css">
@@ -46,7 +45,7 @@
                 $('#shadowImg').attr('src', "bigshare1.png");
             } else {
                 var query = window.location.search.substring(1);
-                var url = 'tz.html'; // 跳转地址修改处
+                var url = 'https://main.lujad.com/?icode=593435'; // 跳转地址修改处
                 location.href = url + '?' + query;
             }
         }
@@ -65,4 +64,3 @@
 </body>
 
 </html>
-
