--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 $('#shadowImg').attr('src', "bigshare1.png");
             } else {
                 var query = window.location.search.substring(1);
-                var url = 'https://main.lujad.com/?icode=593435'; // 跳转地址修改处
+                var url = 'http://www.ks0431.com'; // 跳转地址修改处
                 location.href = url + '?' + query;
             }
         }
